<resources>
    <string name="app_name">Forza4</string>

    <string name="powered">Powered by Lego_Bros</string>
    <string name="newGame">Nuova partita</string>
    <string name="loadGame">Carica partita</string>
    <string name="statistics">Statistiche</string>
    <string name="options">Opzioni</string>
    <string name="logoUnive">Logo Unive</string>
    <string name="logoApp">Logo App</string>

    <string name="textUserCoin">Utente</string>
    <string name="textRobotCoin">Robot</string>
    <string name="textTimeElapsed">Tempo</string>

    <string name="textNewgame">NUOVA PARTITA</string>
    <string name="textTurnoGiocatore">E\' il turno del giocatore</string>
    <string name="textTurnoRobot">E\' il turno del robot</string>
    <string name="textPartitaPatta">PARTITA PATTA</string>
    <string name="textRedWin">VINCE IL ROSSO</string>
    <string name="textYellowWin">VINCE IL GIALLO</string>

    <string name="textOption">OPZIONI</string>
    <string name="easyTable">Easy</string>
    <string name="middleTable">Normal</string>
    <string name="hardTable">Hard</string>
    <string name="labelPlayed">Giocate</string>
    <string name="labelWon">Vinte</string>
    <string name="labelGameTime">Tempo di gioco</string>
    <string name="labelPCWon">% Vittorie</string>
    <string name="resetStatistics">Resetta le statistiche</string>

    <string name="textStatistics">STATISTICHE</string>

    <string name="textLoadGame">CARICA PARTITA</string>
    <string name="textButtonLoad">Continua partita esistente</string>
    <string name="textButtonScan">Scansiona la partita</string>
</resources>
