<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="it.unive.dais.ingsoftware.forza4.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/autour_one"
        android:text="@string/powered"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="480dp" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#3498db"
        android:fontFamily="@font/autour_one"
        android:text="@string/newGame"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="128dp" />

    <Button
        android:id="@+id/loadGameButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#3498db"
        android:fontFamily="@font/autour_one"
        android:text="@string/loadGame"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="217dp" />

    <Button
        android:id="@+id/statisticsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#3498db"
        android:fontFamily="@font/autour_one"
        android:text="@string/statistics"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="304dp" />

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#3498db"
        android:fontFamily="@font/autour_one"
        android:text="@string/options"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="387dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/logoUnive"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="16dp" />
</android.support.constraint.ConstraintLayout>